[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=1.21.0",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "requests>=2.25.0",
    "scikit-learn>=1.7.1",
    "trafilatura>=2.0.0",
    "twilio>=9.7.0",
]
